// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatData it formats data 1`] = `
{
  "name": "First Last",
}
`;

exports[`getData it accepts data options 1`] = `
{
  "author": "shadcn",
  "id": "ID",
  "title": "Title of Article",
  "type": "node--article",
}
`;

exports[`getData it accepts placeholder options 1`] = `
{
  "email": "name@example.com",
  "name": "shadcn",
}
`;

exports[`getData it returns data for a query 1`] = `
{
  "author": "shadcn",
  "id": "id",
  "title": "Title of Article",
  "type": "node--article",
}
`;

exports[`getData it returns data when both data and placeholder is defined 1`] = `
{
  "email": "foo@example.com",
}
`;

exports[`getData it returns formatted data if a formatter is defined 1`] = `
{
  "email": "foo@example.com",
  "name": "First Last",
}
`;

exports[`getData it returns placeholder data if a query does not define data 1`] = `
{
  "name": "shadcn",
}
`;

exports[`getParams it accepts params options 1`] = `
{
  "fields": {
    "resource": "foo,bar",
  },
  "filter": {},
  "include": [],
  "sort": [],
}
`;

exports[`getParams it allows params to be nested 1`] = `
{
  "fields": {},
  "filter": {},
  "include": "field_image,uid",
  "page": {
    "limit": 10,
  },
  "sort": [],
}
`;

exports[`getParams it returns params for a query 1`] = `
{
  "fields": {},
  "filter": {},
  "include": "field_image,uid",
  "sort": [],
}
`;
